# myrrh

./: .gitignore  CMakeLists.txt  README.md  main.cpp
base/: Platform.cpp  platform.h
engine/animation/: animation.cpp  animation.h  animation_manager.h  skeleton.cpp  skeleton.h
engine/core/: aabb.h  allocator.cpp  allocator.h  array.h  associative_array.h  dual_quaternion.cpp  dual_quaternion.h  matrix_utils.h  murmur3.cpp  murmur3.h  path.h  pod_hashmap.h  quaternion.cpp  quaternion.h  queue.h  types.h
engine/core/ECS/: Entity.h  component.h  transformComponent.h
engine/core/fs/: filesystem.cpp  filesystem.h
engine/core/resources/: resource.h  resource_deity.h  resource_manager.h
engine/loaders/: ObjLoader.cpp  ObjLoader.h
engine/renderer/: camera.cpp  camera.h  framebuffer.h  frustum.h  lights.h  renderer.cpp  renderer.h
engine/renderer/cameras/: ThirdPersonCamera.cpp  ThirdPersonCamera.h
engine/renderer/shaders/: program.cpp  program.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h
engine/renderer/textures/: Bitmap.cpp  Bitmap.h  Material.h  Texture.cpp  Texture.h
